# genshin_fsr_brigde

./: .gitignore  Build-OnlineInstaller.ps1  Build-Package.ps1  Build-Release.ps1  CMakeLists.txt  Dx11FsrBridge.cpp  Dx11FsrBridge.ini  Dx11FsrBridge.rc  Dx11FsrBridge.release.ini  Fsr2TranslationLayer.cpp  Fsr2TranslationLayer.def  Fsr31Bridge.cpp  Fsr31BridgeStub.cpp  OPTISCALER_COMPATIBILITY.md  OptiScalerNgxBridge.cpp  README.md  README_EN.md  SOURCE.md
.github/workflows/: build-lite.yml
AntiPlayerMosaic/: AntiPlayerMosaic.cpp  AntiPlayerMosaic.rc  CMakeLists.txt  NOTICE  PatternScanner.hpp  README.md  scan_test.cpp
Dx11FsrBridge/: CMakeLists.txt  Dx11FsrBridge.color-diagnostics.ini  Dx11FsrBridge.cpp  Dx11FsrBridge.ini  Dx11FsrBridge.ngx-experimental.ini  Dx11FsrBridge.profile.ini  Dx11FsrBridge.rc  Dx11FsrBridge.release.ini  Fsr2TranslationLayer.cpp  Fsr2TranslationLayer.h  Fsr31Bridge.h  NOTICE  OPTISCALER_COMPATIBILITY.md  OptiScalerNgxBridge.h  RenderScaleMenu.cpp  RenderScaleMenu.h
Dx11FsrBridge/tools/: analyze_fsr2_inputs.py  convert_pre_color_captures.py
FufuGraphicsPlugin/: CMakeLists.txt  FufuGraphicsPlugin.cpp  FufuGraphicsPlugin.rc  Install-FufuPlugin-Marketplace.lua  Install-FufuPlugin.lua  Install-FufuPlugin.ps1  config.ini  安装到芙芙启动器.bat
GenshinOneClick/: ?????.txt  Apply-PackageUpdate.ps1  Configure-Launcher.bat  Configure-Launcher.en.bat  Configure.ps1  Feedback.txt  Installer.ps1  Localization.ps1  README.md  ReShadeResources.ps1  component-manifest.json
GenshinOneClick/payload/Bridge/: Dx11FsrBridge.default.ini  Dx11FsrBridge.ini
GenshinOneClick/payload/ReShade/: LICENSE-ReShade-BSD-3-Clause.txt
GenshinOneClick/payload/ReShade/reshade-shaders/: NOTICE-ReShade_HDR_shaders.txt  NOTICE-RenoDX-genshin.txt
GenshinOneClick/payload/ReShade/reshade-shaders/Addons/: renodx-genshin.addon64
RenoDX-Genshin/: UPSTREAM.md
SharedResources/Bridge/default_config/: Dx11FsrBridge.ini
SharedResources/OptiScaler/default_config/: OptiScaler-UpscalingFiles.json  OptiScaler.ini
SharedResources/ReShade/default_config/: ReShade.ini  ReShadePreset.ini
tools/: Test-FpsUnlockLocalization.ps1
